--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".MainLogout"></activity>
+        <activity android:name=".MainLogout" />
+        <activity android:name=".RegisterActivity"></activity>
     </application>
 
 </manifest>
