--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.google.firebase:firebase-auth:11.6.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.google.firebase:firebase-storage:11.8.0'
+  compile 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+
     //implementation 'com.google.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
