--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,13 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-firestore:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
-  compile 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
 
     //implementation 'com.google.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
