--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,11 @@
             android:screenOrientation="portrait" />
         <activity android:name=".MainLogout" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".SetupActivity"></activity>
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity android:name=".SetupActivity" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity android:name=".NewPostActivity" android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
