--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         <activity
             android:name=".NewPostActivity"
             android:parentActivityName=".MainActivity" />
+        <activity android:name=".CommentsActivity"
+            android:parentActivityName=".MainActivity"/>
         <activity android:name=".FrontPage" />
 
         <!-- <meta-data -->
