--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -85,7 +86,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".balance_withdraw" />
         <activity android:name=".balance_add" />
-        <activity android:name=".passwordActivity"></activity>
+        <activity android:name=".passwordActivity" />
+        <activity android:name=".CallActivity"></activity>
     </application>
 
 </manifest>
